--- a/index.html
+++ b/index.html
@@ -1,1 +1,33 @@
-<HTML CONTENT FROM ABOVE INDEX PAGE>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Piyush Toraskar - Portfolio</title>
+<link rel="stylesheet" href="style.css">
+<script src="script.js" defer></script>
+</head>
+<body>
+<header>
+    <h1>Piyush Toraskar</h1>
+    <nav>
+        <a href="index.html">Home</a>
+        <a href="projects.html">Projects</a>
+        <a href="resume.html">Resume</a>
+        <a href="contact.html">Contact</a>
+    </nav>
+    <button class="dark-mode-toggle" onclick="toggleDarkMode()">🌙</button>
+</header>
+<section>
+    <img src="img/profile.jpg" alt="Profile Picture" class="profile">
+    <h2>About Me</h2>
+    <div class="card">
+        <p>Hi! I'm Piyush, a Dual Degree student (B.Tech + M.Tech) in Electrical Engineering at IIT Bhubaneswar, passionate about Machine Learning, Power Electronics, and innovative problem-solving.</p>
+        <p>I’ve built projects in AI/ML, C++, and power systems, and I enjoy leading teams in sports and tech competitions.</p>
+    </div>
+</section>
+<footer>
+    <p>© 2025 Piyush Toraskar</p>
+</footer>
+</body>
+</html>
