--- a/projects.html
+++ b/projects.html
@@ -1,37 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Projects - Piyush Toraskar</title>
-<link rel="stylesheet" href="style.css">
-<script src="script.js" defer></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Projects - Piyush Toraskar</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<header>
-    <h1>Projects</h1>
-    <nav>
-        <a href="index.html">Home</a>
-        <a href="projects.html">Projects</a>
-        <a href="resume.html">Resume</a>
-        <a href="contact.html">Contact</a>
-    </nav>
-    <button class="dark-mode-toggle" onclick="toggleDarkMode()">🌙</button>
-</header>
-<section>
-    <div class="card">
-        <h3>BiasFree - Tredence Hackathon Finalist</h3>
-        <p>Machine Learning model to classify gender-biased sentences with 90% AUC-ROC.</p>
-        <a href="https://github.com/Piyush-Toraskar/BiasFree" target="_blank">View Project</a>
-    </div>
-    <div class="card">
-        <h3>Game Arcade</h3>
-        <p>4 classic games in C++ using graphics.h with scoring and UI features.</p>
-        <a href="https://github.com/Piyush-Toraskar/ARCADE---PDS-project" target="_blank">View Project</a>
-    </div>
-</section>
-<footer>
-    <p>© 2025 Piyush Toraskar</p>
-</footer>
+    <header>
+        <h1>Projects</h1>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="projects.html">Projects</a>
+            <a href="resume.html">Resume</a>
+            <a href="contact.html">Contact</a>
+        </nav>
+    </header>
+
+    <main>
+        <section>
+            <h2>BiasFree</h2>
+            <p>Machine learning model to classify gender-biased sentences with 90% AUC-ROC.</p>
+            <a href="https://github.com/Piyush-Toraskar/BiasFree" target="_blank">View on GitHub</a>
+
+            <h2>Game Arcade</h2>
+            <p>Collection of 4 classic games built in C++ using graphics.h.</p>
+            <a href="https://github.com/Piyush-Toraskar/ARCADE---PDS-project" target="_blank">View on GitHub</a>
+        </section>
+    </main>
+
+    <footer>
+        <p>© 2025 Piyush Toraskar</p>
+    </footer>
 </body>
 </html>
