--- a/resume.html
+++ b/resume.html
@@ -1,31 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Resume - Piyush Toraskar</title>
-<link rel="stylesheet" href="style.css">
-<script src="script.js" defer></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Resume - Piyush Toraskar</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<header>
-    <h1>Resume</h1>
-    <nav>
-        <a href="index.html">Home</a>
-        <a href="projects.html">Projects</a>
-        <a href="resume.html">Resume</a>
-        <a href="contact.html">Contact</a>
-    </nav>
-    <button class="dark-mode-toggle" onclick="toggleDarkMode()">🌙</button>
-</header>
-<section>
-    <div class="card">
-        <p>You can view or download my full resume here:</p>
-        <a href="resume.pdf" target="_blank">📄 View Resume</a>
-    </div>
-</section>
-<footer>
-    <p>© 2025 Piyush Toraskar</p>
-</footer>
+    <header>
+        <h1>Resume</h1>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="projects.html">Projects</a>
+            <a href="resume.html">Resume</a>
+            <a href="contact.html">Contact</a>
+        </nav>
+    </header>
+
+    <main>
+        <section>
+            <p>You can view or download my resume here:</p>
+            <a href="resume.pdf" target="_blank">View Resume</a>
+        </section>
+    </main>
+
+    <footer>
+        <p>© 2025 Piyush Toraskar</p>
+    </footer>
 </body>
 </html>
