--- a/contact.html
+++ b/contact.html
@@ -1,38 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Contact - Piyush Toraskar</title>
-<link rel="stylesheet" href="style.css">
-<script src="script.js" defer></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Contact - Piyush Toraskar</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<header>
-    <h1>Contact Me</h1>
-    <nav>
-        <a href="index.html">Home</a>
-        <a href="projects.html">Projects</a>
-        <a href="resume.html">Resume</a>
-        <a href="contact.html">Contact</a>
-    </nav>
-    <button class="dark-mode-toggle" onclick="toggleDarkMode()">🌙</button>
-</header>
-<section>
-    <div class="card">
-        <form action="https://formspree.io/f/your-form-id" method="POST">
-            <label>Name:</label><br>
-            <input type="text" name="name" required><br><br>
-            <label>Email:</label><br>
-            <input type="email" name="email" required><br><br>
-            <label>Message:</label><br>
-            <textarea name="message" rows="5" required></textarea><br><br>
-            <button type="submit">Send</button>
-        </form>
-    </div>
-</section>
-<footer>
-    <p>© 2025 Piyush Toraskar</p>
-</footer>
+    <header>
+        <h1>Contact Me</h1>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="projects.html">Projects</a>
+            <a href="resume.html">Resume</a>
+            <a href="contact.html">Contact</a>
+        </nav>
+    </header>
+
+    <main>
+        <section>
+            <p>Email: <a href="mailto:piyushtoraskar@gmail.com">piyushtoraskar@gmail.com</a></p>
+            <p>LinkedIn: <a href="https://www.linkedin.com/in/piyush-toraskar-1a9092290/" target="_blank">Profile</a></p>
+            <p>GitHub: <a href="https://github.com/Piyush-Toraskar" target="_blank">Profile</a></p>
+        </section>
+    </main>
+
+    <footer>
+        <p>© 2025 Piyush Toraskar</p>
+    </footer>
 </body>
 </html>
