--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <section>
             <img src="profile.jpg" alt="Profile Picture" class="profile">
             <h2>About Me</h2>
-            <p>Hello! I’m Piyush, a Dual Degree student at IIT Bhubaneswar with interests in AI/ML, power systems, and problem solving. I have experience in building real-world projects and leading teams.</p>
+            <p>Hello! I’m Piyush, a Dual Degree student at IIT Bhubaneswar with interests in AI/ML, power systems, and problem-solving. I’ve built projects in machine learning and embedded systems, and I enjoy sports and leadership roles.</p>
         </section>
     </main>
 
