--- a/projects.html
+++ b/projects.html
@@ -18,14 +18,17 @@
     </header>
 
     <main>
-        <section>
-            <h2>BiasFree</h2>
-            <p>Machine learning model to classify gender-biased sentences with 90% AUC-ROC.</p>
-            <a href="https://github.com/Piyush-Toraskar/BiasFree" target="_blank">View on GitHub</a>
-
-            <h2>Game Arcade</h2>
-            <p>Collection of 4 classic games built in C++ using graphics.h.</p>
-            <a href="https://github.com/Piyush-Toraskar/ARCADE---PDS-project" target="_blank">View on GitHub</a>
+        <section class="project-grid">
+            <div class="project-card">
+                <h3>BiasFree</h3>
+                <p>ML model to classify gender-biased sentences with 90% AUC-ROC.</p>
+                <a href="https://github.com/Piyush-Toraskar/BiasFree" target="_blank">View on GitHub</a>
+            </div>
+            <div class="project-card">
+                <h3>Game Arcade</h3>
+                <p>4 classic games in C++ using graphics.h with scoring and UI features.</p>
+                <a href="https://github.com/Piyush-Toraskar/ARCADE---PDS-project" target="_blank">View on GitHub</a>
+            </div>
         </section>
     </main>
 
