--- a/index.html
+++ b/index.html
@@ -1,33 +1,305 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Piyush Toraskar - Portfolio</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Piyush Toraskar · Portfolio</title>
+  <meta name="description" content="Portfolio of Piyush Toraskar – IIT Bhubaneswar. Projects in ML, C++, and power electronics." />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet">
+  <style>
+    :root{
+      --bg:#0b0c10;--muted:#111217;--text:#e6e9ef;--sub:#b2b8c6;--pri:#7c3aed;--pri-2:#22d3ee;--card:#13141a;--glass:rgba(255,255,255,.05);
+      --shadow:0 10px 30px rgba(0,0,0,.35);
+    }
+    *{box-sizing:border-box}
+    html,body{margin:0;padding:0;background:var(--bg);color:var(--text);font-family:Inter,system-ui,Segoe UI,Roboto,Helvetica,Arial,sans-serif;scroll-behavior:smooth}
+    a{color:inherit}
+    .container{width:min(1100px,90vw);margin-inline:auto}
+    header.nav{
+      position:sticky;top:0;z-index:50;background:linear-gradient(180deg,rgba(11,12,16,.9),rgba(11,12,16,.5),transparent);
+      backdrop-filter: blur(8px);
+      border-bottom:1px solid rgba(255,255,255,.06)
+    }
+    .row{display:flex;align-items:center;justify-content:space-between;gap:1rem;padding:1rem .5rem}
+    .brand{font-weight:800;letter-spacing:.3px}
+    .navlinks{display:flex;gap:1rem;flex-wrap:wrap}
+    .chip{padding:.55rem .9rem;border-radius:999px;background:var(--glass);border:1px solid rgba(255,255,255,.08);transition:.2s}
+    .chip:hover{transform:translateY(-1px);background:rgba(255,255,255,.08)}
+    .toggle{cursor:pointer}
+    /* Hero */
+    .hero{position:relative;overflow:hidden}
+    .hero .container{padding:5rem 0 3rem}
+    .title{font-size:clamp(2rem,5vw,3.2rem);line-height:1.05;margin:0 0 .6rem}
+    .subtitle{color:var(--sub);margin:0 0 1.2rem;max-width:820px}
+    .cta{display:flex;gap:.8rem;flex-wrap:wrap}
+    .btn{padding:.9rem 1.1rem;border-radius:14px;border:1px solid rgba(255,255,255,.1);background:linear-gradient(180deg,rgba(255,255,255,.06),rgba(255,255,255,.02));box-shadow:var(--shadow);text-decoration:none;font-weight:600;transition:.2s}
+    .btn:hover{transform:translateY(-2px)}
+    .btn.primary{background:linear-gradient(135deg,var(--pri),var(--pri-2));border:0}
+    .meta{display:flex;gap:1rem;margin-top:1.2rem;color:var(--sub);flex-wrap:wrap}
+    /* floating blobs */
+    .blob, .blob2{position:absolute;filter:blur(40px);opacity:.45;z-index:-1}
+    .blob{width:420px;height:420px;background:radial-gradient(circle at 30% 30%, var(--pri), transparent 60%);top:-60px;right:-120px}
+    .blob2{width:380px;height:380px;background:radial-gradient(circle at 70% 70%, var(--pri-2), transparent 60%);bottom:-80px;left:-120px}
+
+    /* Sections */
+    section{padding:3.5rem 0;border-top:1px solid rgba(255,255,255,.06)}
+    h2.sec{font-size:1rem;text-transform:uppercase;letter-spacing:.2em;color:#94a3b8;margin:0 0 1.2rem}
+    .grid{display:grid;gap:1rem}
+    @media (min-width:760px){.grid.cols-2{grid-template-columns:1fr 1fr}.grid.cols-3{grid-template-columns:repeat(3,1fr)}}
+
+    /* Cards */
+    .card{background:var(--card);border:1px solid rgba(255,255,255,.06);border-radius:18px;padding:1.2rem;box-shadow:var(--shadow);position:relative;overflow:hidden}
+    .card::after{content:"";position:absolute;inset:auto -40% -60% -40%;height:120%;background:radial-gradient(60% 20% at 50% 100%,rgba(255,255,255,.06),transparent 60%)}
+    .card h3{margin:.2rem 0 .4rem}
+    .tag{display:inline-block;padding:.25rem .6rem;border-radius:999px;background:rgba(124,58,237,.18);border:1px solid rgba(124,58,237,.4);font-size:.8rem;margin:.2rem .3rem .2rem 0}
+
+    /* Projects */
+    .project{display:flex;flex-direction:column;gap:.6rem}
+    .project .links{display:flex;gap:.6rem;flex-wrap:wrap}
+
+    /* Skills */
+    .skills{display:grid;grid-template-columns:repeat(auto-fit,minmax(180px,1fr));gap:1rem}
+    .skill{background:linear-gradient(180deg,rgba(255,255,255,.04),rgba(255,255,255,.02));border:1px solid rgba(255,255,255,.06);border-radius:16px;padding:1rem}
+    .bar{height:10px;background:#0f1117;border-radius:999px;overflow:hidden;border:1px solid rgba(255,255,255,.06)}
+    .bar>i{display:block;height:100%;width:0;background:linear-gradient(90deg,var(--pri),var(--pri-2))}
+
+    /* Timeline */
+    .timeline{position:relative;padding-left:1.5rem}
+    .timeline::before{content:"";position:absolute;left:.45rem;top:.2rem;bottom:.2rem;width:2px;background:linear-gradient(var(--pri),transparent)}
+    .titem{position:relative;margin:.8rem 0}
+    .titem::before{content:"";position:absolute;left:-.25rem;top:.35rem;width:10px;height:10px;border-radius:50%;background:var(--pri)}
+
+    /* Contact */
+    form{display:grid;gap:.8rem}
+    input,textarea{background:#0f1117;border:1px solid rgba(255,255,255,.08);color:var(--text);padding:.8rem;border-radius:10px}
+    button.send{justify-self:start}
+
+    footer{padding:2rem 0;color:var(--sub);text-align:center}
+    .sr{position:absolute;left:-9999px}
+  </style>
 </head>
 <body>
-    <header>
-        <h1>Piyush Toraskar</h1>
-        <p>B.Tech + M.Tech in Electrical Engineering | IIT Bhubaneswar</p>
-        <nav>
-            <a href="index.html">Home</a>
-            <a href="projects.html">Projects</a>
-            <a href="resume.html">Resume</a>
-            <a href="contact.html">Contact</a>
-        </nav>
-    </header>
+  <header class="nav">
+    <div class="container row">
+      <div class="brand">PT</div>
+      <nav class="navlinks" aria-label="Primary">
+        <a class="chip" href="#about">About</a>
+        <a class="chip" href="#projects">Projects</a>
+        <a class="chip" href="#skills">Skills</a>
+        <a class="chip" href="#timeline">Timeline</a>
+        <a class="chip" href="#contact">Contact</a>
+        <a class="chip" href="resume.pdf" target="_blank" rel="noopener">Resume</a>
+      </nav>
+      <button class="chip toggle" id="themeToggle" aria-label="Toggle dark mode">🌙</button>
+    </div>
+  </header>
 
-    <main>
-        <section>
-            <img src="profile.jpg" alt="Profile Picture" class="profile">
-            <h2>About Me</h2>
-            <p>Hello! I’m Piyush, a Dual Degree student at IIT Bhubaneswar with interests in AI/ML, power systems, and problem-solving. I’ve built projects in machine learning and embedded systems, and I enjoy sports and leadership roles.</p>
-        </section>
-    </main>
+  <section class="hero" id="about" aria-labelledby="intro-title">
+    <div class="blob"></div><div class="blob2"></div>
+    <div class="container">
+      <h1 id="intro-title" class="title">Hi, I’m <span style="background:linear-gradient(90deg,var(--pri),var(--pri-2));-webkit-background-clip:text;background-clip:text;color:transparent">Piyush Toraskar</span> —
+        building projects across ML, C++, and power electronics.</h1>
+      <p class="subtitle">Dual Degree (B.Tech + M.Tech) in Electrical Engineering @ IIT Bhubaneswar. Finalist at Tredence Hackathon for <strong>BiasFree</strong> (gender-bias classifier). Football secretary, tournament organizer, and lifelong learner.</p>
+      <div class="cta">
+        <a class="btn primary" href="#projects">View Projects ↗</a>
+        <a class="btn" href="https://github.com/Piyush-Toraskar" target="_blank" rel="noopener">GitHub</a>
+        <a class="btn" href="https://www.linkedin.com/in/piyush-toraskar-1a9092290/" target="_blank" rel="noopener">LinkedIn</a>
+        <a class="btn" href="mailto:piyushtoraskar@gmail.com">Email Me</a>
+      </div>
+      <div class="meta">
+        <span>📍 India</span>
+        <span>🎓 IIT Bhubaneswar</span>
+        <span>⚡ ML · C++ · Python · MATLAB</span>
+      </div>
+    </div>
+  </section>
 
-    <footer>
-        <p>© 2025 Piyush Toraskar</p>
-    </footer>
+  <section id="projects" aria-labelledby="projects-title">
+    <div class="container">
+      <h2 class="sec" id="projects-title">Projects</h2>
+      <div class="grid cols-2">
+        <article class="card project" data-anim>
+          <div>
+            <span class="tag">ML · NLP</span>
+            <h3>BiasFree — Hackathon Finalist</h3>
+            <p>Classifier for gender-biased sentences using a stacking ensemble (BERT, Logistic Regression, LSTM) with Random Forest meta-learner. ~90% AUC-ROC; realtime prototype demo.</p>
+          </div>
+          <div class="links">
+            <a class="btn" href="https://github.com/Piyush-Toraskar/BiasFree" target="_blank" rel="noopener">GitHub</a>
+          </div>
+        </article>
+        <article class="card project" data-anim>
+          <div>
+            <span class="tag">C++ · Games</span>
+            <h3>Game Arcade</h3>
+            <p>Set of 4 classic games (Snake, 2048, Tic‑Tac‑Toe, Connect‑4) built in C++ with <code>graphics.h</code>. Includes scoring, input handling, and polished UI micro‑interactions.</p>
+          </div>
+          <div class="links">
+            <a class="btn" href="https://github.com/Piyush-Toraskar/ARCADE---PDS-project" target="_blank" rel="noopener">GitHub</a>
+          </div>
+        </article>
+        <article class="card project" data-anim>
+          <div>
+            <span class="tag">Hardware · MATLAB</span>
+            <h3>Power Electronics Sim</h3>
+            <p>Explorations in converters and motor drive control using MATLAB/Simulink; modeled switching behavior, losses, and controller response.</p>
+          </div>
+          <div class="links">
+            <span class="btn" style="pointer-events:none;opacity:.6">Private</span>
+          </div>
+        </article>
+        <article class="card project" data-anim>
+          <div>
+            <span class="tag">Photography</span>
+            <h3>CLIX Gallery</h3>
+            <p>Curated photos as a member of the CLIX Photography Society, with emphasis on low‑light sports and event coverage.</p>
+          </div>
+          <div class="links">
+            <span class="btn" style="pointer-events:none;opacity:.6">Gallery soon</span>
+          </div>
+        </article>
+      </div>
+    </div>
+  </section>
+
+  <section id="skills" aria-labelledby="skills-title">
+    <div class="container">
+      <h2 class="sec" id="skills-title">Skills</h2>
+      <div class="skills">
+        <div class="skill" data-anim>
+          <strong>Languages</strong>
+          <div class="bar" aria-hidden="true"><i style="--pct:90%"></i></div>
+          <small>C, C++, Python, MySQL</small>
+        </div>
+        <div class="skill" data-anim>
+          <strong>ML / Data</strong>
+          <div class="bar"><i style="--pct:85%"></i></div>
+          <small>NumPy, Pandas, scikit‑learn, BERT</small>
+        </div>
+        <div class="skill" data-anim>
+          <strong>Tools</strong>
+          <div class="bar"><i style="--pct:80%"></i></div>
+          <small>MATLAB, Git, VSCode, Logisim</small>
+        </div>
+        <div class="skill" data-anim>
+          <strong>Soft Skills</strong>
+          <div class="bar"><i style="--pct:88%"></i></div>
+          <small>Leadership, Comm, Time Mgmt, Critical Thinking</small>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section id="timeline" aria-labelledby="timeline-title">
+    <div class="container">
+      <h2 class="sec" id="timeline-title">Timeline</h2>
+      <div class="timeline">
+        <div class="titem card" data-anim>
+          <h3>IIT Bhubaneswar — Dual Degree</h3>
+          <small>Nov 2022 – Present · CGPA 8.01</small>
+          <p>Electrical Engineering (B.Tech) + Power Electronics & Drives (M.Tech).</p>
+        </div>
+        <div class="titem card" data-anim>
+          <h3>Hackathon Finalist — Tredence</h3>
+          <small>BiasFree Project</small>
+          <p>Stacking ensemble, AUC‑ROC ~90%, real‑time prototype.</p>
+        </div>
+        <div class="titem card" data-anim>
+          <h3>Football Secretary — Gymkhana Council</h3>
+          <small>2023–2024</small>
+          <p>Led 5+ institute tournaments; organized inter‑college event (10+ colleges); managed ₹100K+ budget.</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section id="contact" aria-labelledby="contact-title">
+    <div class="container">
+      <h2 class="sec" id="contact-title">Contact</h2>
+      <div class="grid cols-2">
+        <div class="card" data-anim>
+          <h3>Let’s talk</h3>
+          <p>Email me at <a href="mailto:piyushtoraskar@gmail.com">piyushtoraskar@gmail.com</a> or use the form.</p>
+          <p><a class="btn" href="resume.pdf" target="_blank" rel="noopener">Open Resume</a></p>
+        </div>
+        <div class="card" data-anim>
+          <form action="https://formspree.io/f/your-form-id" method="POST">
+            <label class="sr" for="name">Name</label>
+            <input id="name" name="name" placeholder="Your name" required>
+            <label class="sr" for="email">Email</label>
+            <input id="email" name="email" type="email" placeholder="you@example.com" required>
+            <label class="sr" for="msg">Message</label>
+            <textarea id="msg" name="message" rows="5" placeholder="How can I help?" required></textarea>
+            <button class="btn primary send" type="submit">Send</button>
+          </form>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <footer>
+    <div class="container">© <span id="y"></span> Piyush Toraskar · Built with ❤️</div>
+  </footer>
+
+  <!-- GSAP (Animations) -->
+  <script defer src="https://cdn.jsdelivr.net/npm/gsap@3/dist/gsap.min.js"></script>
+  <script defer src="https://cdn.jsdelivr.net/npm/gsap@3/dist/ScrollTrigger.min.js"></script>
+  <script>
+    // Year stamp
+    document.getElementById('y').textContent = new Date().getFullYear();
+
+    // Theme toggle (persists)
+    const btn = document.getElementById('themeToggle');
+    const key = 'pt-theme';
+    const saved = localStorage.getItem(key);
+    if(saved === 'light'){document.documentElement.style.setProperty('--bg','#f6f7fb');document.documentElement.style.setProperty('--text','#0b0c10');document.documentElement.style.setProperty('--sub','#334155');document.documentElement.style.setProperty('--muted','#ffffff');document.documentElement.style.setProperty('--card','#ffffff');btn.textContent='☀️'}
+    btn.addEventListener('click',()=>{
+      const isDark = getComputedStyle(document.documentElement).getPropertyValue('--bg').trim() === '#0b0c10';
+      if(isDark){
+        document.documentElement.style.setProperty('--bg','#f6f7fb');
+        document.documentElement.style.setProperty('--text','#0b0c10');
+        document.documentElement.style.setProperty('--sub','#334155');
+        document.documentElement.style.setProperty('--muted','#ffffff');
+        document.documentElement.style.setProperty('--card','#ffffff');
+        btn.textContent='☀️';
+        localStorage.setItem(key,'light');
+      } else {
+        document.documentElement.style.setProperty('--bg','#0b0c10');
+        document.documentElement.style.setProperty('--text','#e6e9ef');
+        document.documentElement.style.setProperty('--sub','#b2b8c6');
+        document.documentElement.style.setProperty('--muted','#111217');
+        document.documentElement.style.setProperty('--card','#13141a');
+        btn.textContent='🌙';
+        localStorage.setItem(key,'dark');
+      }
+    });
+
+    // Animate skill bars on view
+    const bars = document.querySelectorAll('.bar i');
+    const io = new IntersectionObserver((entries)=>{
+      entries.forEach(e=>{
+        if(e.isIntersecting){
+          const el = e.target; const pct = el.style.getPropertyValue('--pct')||'85%';
+          el.animate([{width:'0%'},{width:pct}],{duration:1000,fill:'forwards',easing:'cubic-bezier(.22,1,.36,1)'});
+          io.unobserve(el);
+        }
+      })
+    },{threshold:.4});
+    bars.forEach(b=>io.observe(b));
+
+    // GSAP section/card reveals
+    window.addEventListener('load',()=>{
+      if(!window.gsap) return;
+      gsap.registerPlugin(ScrollTrigger);
+      gsap.utils.toArray('[data-anim]').forEach((el)=>{
+        gsap.from(el,{opacity:0,y:24,scale:.98,duration:.6,ease:'power2.out',scrollTrigger:{trigger:el,start:'top 85%'}});
+      });
+      gsap.from('.title',{opacity:0,y:18,duration:.8,delay:.1});
+      gsap.from('.subtitle',{opacity:0,y:18,duration:.8,delay:.2});
+      gsap.from('.cta .btn',{opacity:0,y:18,stagger:.08,duration:.6,delay:.25});
+    });
+  </script>
 </body>
 </html>
